syntax = "proto3";

package text;

option go_package = "./proto/text_store";

service TextService {
  rpc Create(CreateRequest) returns (Empty);
  rpc Change(ChangeRequest) returns (Empty);
  rpc Delete(DeleteRequest) returns (Empty);
  rpc Get(GetRequest)       returns (GetResponse);
}

message Empty {}

message CreateRequest {
  string metaInfo = 1;
  string text     = 2;

}

message ChangeRequest {
  string metaInfo = 1;
  string text     = 2;
}

message DeleteRequest {
  string metaInfo = 1;
}

message GetRequest {
  string metaInfo = 1;
}

message GetResponse {
  string metaInfo = 1;
  string text     = 2;
}

/*
protoc --go_out=. --go_opt=paths=source_relative   --go-grpc_out=. --go-grpc_opt=paths=source_relative   pkg/proto/data/text/text.proto
*/
